[gd_scene load_steps=5 format=3 uid="uid://dln6fmmhpm84g"]

[ext_resource type="Script" uid="uid://cptgvsdwcpmdr" path="res://scenes/game/hud/pause_menu/pause_menu.gd" id="1_rmrdv"]
[ext_resource type="PackedScene" uid="uid://c6hoggoja1fao" path="res://scenes/game/hud/pause_menu/option_menu.tscn" id="2_0wyp3"]
[ext_resource type="FontFile" uid="uid://bj022vx1alxl" path="res://assets/texts/fonts/SpaceMono-Regular.ttf" id="2_d1l6u"]
[ext_resource type="PackedScene" uid="uid://cywhlrpqd50bh" path="res://scenes/game/hud/pause_menu/controls_info.tscn" id="3_scskg"]

[node name="PauseMenu" type="Control" node_paths=PackedStringArray("OPTION_MENU", "MAIN_MENU", "RIPRENDI_BUTTON", "OPTIONS_BUTTON", "ESCI_BUTTON", "COMANDI_MENU")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_rmrdv")
OPTION_MENU = NodePath("MarginContainer/PanelContainer/OptionMenu")
MAIN_MENU = NodePath("MarginContainer/PanelContainer/MainMenu")
RIPRENDI_BUTTON = NodePath("MarginContainer/PanelContainer/MainMenu/Main Menu/Riprendi")
OPTIONS_BUTTON = NodePath("MarginContainer/PanelContainer/MainMenu/Main Menu/Opzioni")
ESCI_BUTTON = NodePath("MarginContainer/PanelContainer/MainMenu/Main Menu/Esci")
COMANDI_MENU = NodePath("MarginContainer/PanelContainer/Comandi")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Comandi" type="Control" parent="MarginContainer/PanelContainer"]
visible = false
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/PanelContainer/Comandi"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/Comandi"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -358.635
offset_top = -417.0
offset_right = 358.635
offset_bottom = -160.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="Control" type="Control" parent="MarginContainer/PanelContainer/Comandi/VBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2

[node name="Controlli" parent="MarginContainer/PanelContainer/Comandi/VBoxContainer/Control" instance=ExtResource("3_scskg")]
layout_mode = 2
offset_left = 196.0
offset_top = -285.0
offset_right = 522.0
offset_bottom = -61.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2.38, 2.38)
pivot_offset = Vector2(163, 112)
size_flags_horizontal = 4

[node name="indietro" type="Button" parent="MarginContainer/PanelContainer/Comandi/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_d1l6u")
theme_override_font_sizes/font_size = 30
text = "indietro"

[node name="MainMenu" type="CenterContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2
mouse_filter = 2

[node name="Main Menu" type="GridContainer" parent="MarginContainer/PanelContainer/MainMenu"]
layout_mode = 2
mouse_filter = 2

[node name="Riprendi" type="Button" parent="MarginContainer/PanelContainer/MainMenu/Main Menu"]
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_fonts/font = ExtResource("2_d1l6u")
theme_override_font_sizes/font_size = 40
text = "Riprendi"

[node name="Comandi" type="Button" parent="MarginContainer/PanelContainer/MainMenu/Main Menu"]
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_fonts/font = ExtResource("2_d1l6u")
theme_override_font_sizes/font_size = 40
text = "Comandi"

[node name="Opzioni" type="Button" parent="MarginContainer/PanelContainer/MainMenu/Main Menu"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_fonts/font = ExtResource("2_d1l6u")
theme_override_font_sizes/font_size = 40
text = "Opzioni"

[node name="Esci" type="Button" parent="MarginContainer/PanelContainer/MainMenu/Main Menu"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_fonts/font = ExtResource("2_d1l6u")
theme_override_font_sizes/font_size = 40
text = "Esci"

[node name="OptionMenu" parent="MarginContainer/PanelContainer" instance=ExtResource("2_0wyp3")]
visible = false
layout_mode = 2

[connection signal="pressed" from="MarginContainer/PanelContainer/Comandi/VBoxContainer/indietro" to="." method="_on_indietro_pressed"]
[connection signal="button_down" from="MarginContainer/PanelContainer/MainMenu/Main Menu/Riprendi" to="." method="_on_riprendi_button_down"]
[connection signal="pressed" from="MarginContainer/PanelContainer/MainMenu/Main Menu/Riprendi" to="." method="_on_riprendi_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/MainMenu/Main Menu/Comandi" to="." method="_on_comandi_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/MainMenu/Main Menu/Opzioni" to="." method="_on_opzioni_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/MainMenu/Main Menu/Esci" to="." method="_on_esci_pressed"]
[connection signal="back_clicked" from="MarginContainer/PanelContainer/OptionMenu" to="." method="_on_option_menu_back_clicked"]
